# express-entry-visualizer

./: .gitignore  README.md  index.html  package-lock.json  package.json  rsw.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
analyzer/: Cargo.toml
analyzer/src/: lib.rs
analyzer/src/analyze/: category.rs  mod.rs  pool.rs  rate.rs  smooth.rs
analyzer/src/analyze/calc/: category.rs  mod.rs  pool.rs  score.rs
analyzer/src/chart/: candidate.rs  category.rs  invitation.rs  invite.rs  mod.rs  pool.rs
analyzer/src/data/: category.rs  invite.rs  mod.rs  pathway.rs  pool.rs  raw.rs
src/: App.vue  Version.vue  main.ts  style.css
src/components/: Candidates.vue  Categories.vue  Invitations.vue  Methodology.vue  Overview.vue  Plan.vue
src/composables/: Constant.ts  DataLoader.ts  FocusScale.ts  SimLogScale.ts  Utilities.ts
